<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawpage_bg"
    android:fitsSystemWindows="true"
    tools:context="mingci.MingciOneActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <com.easychange.admin.smallrain.views.IndicatorView
            android:id="@+id/ll_indicator"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/home_button3x"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="280dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/v_apple_bg"
    >

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_root"
        android:layout_width="217dp"
        android:layout_height="59dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="347dp"
    >
        <RelativeLayout
            android:id="@+id/rl_root"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
        >
            <TextView
                android:id="@+id/tv_paint"
                android:layout_width="85dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:background="@drawable/painttext_bg"
                android:gravity="center"
                android:text="吃"
                android:textColor="@color/paint_textcolor"
                android:textSize="18sp"
                android:textStyle="bold"
            />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="85dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="105dp"
                android:background="@drawable/painttext_bg"
                android:gravity="center"
                android:text="蛋糕"
                android:textColor="@color/paint_textcolor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
            />
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp">
        <ImageView
            android:id="@+id/iv_content1"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:scaleType="fitXY"
            android:src="@drawable/n_blank_bg"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/iv_content2"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/n_blank_bg"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_choose1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp">
        <LinearLayout
            android:id="@+id/ll_choose1"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/n_small_bg"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_choose1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/dangao"/>
            <TextView
                android:id="@+id/tv_choose1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="蛋糕"
                android:textColor="@color/paint_textcolor"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <com.easychange.admin.smallrain.views.WaveCircleView
            android:id="@+id/waveCirlceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/iv_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/shouzhi"
            android:visibility="gone"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_choose2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="40dp">
        <LinearLayout
            android:id="@+id/ll_choose2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/n_small_bg"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_choose2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/bingqiling"/>
            <TextView
                android:id="@+id/tv_choose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="冰激凌"
                android:textColor="@color/paint_textcolor"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <com.easychange.admin.smallrain.views.WaveCircleView
            android:id="@+id/waveCirlceView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/iv_point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/shouzhi"
            android:visibility="gone"/>
    </FrameLayout>
</RelativeLayout>