<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_no_login_bg3x"
    tools:context=".activity.HomeActivity">
    <LinearLayout
        android:layout_marginBottom="55dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_register"
            android:paddingBottom="8dip"
            android:text="注册"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="22dip"
            android:background="@drawable/home_button_bg"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_login"
            android:paddingBottom="8dip"
            android:text="登录"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="22dip"
            android:background="@drawable/home_button_bg"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_more"
        android:layout_marginBottom="27dip"
        android:layout_marginRight="30dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="了解产品详情"
            android:textColor="@color/text_tu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:src="@drawable/home_button_right3x" />

    </LinearLayout>
</RelativeLayout>