<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_bg3x">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/parent_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dip"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_pt_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dip"
                            android:layout_marginTop="15dip"
                            android:gravity="center"
                            android:text="修改儿童昵称"
                            android:textColor="#14101e"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="27dip"
                            android:layout_marginRight="27dip"
                            android:layout_marginTop="30dip"
                            android:background="@drawable/border_edt_bg"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/et_one"
                                android:layout_width="match_parent"
                                android:layout_height="43dip"
                                android:background="@null"
                                android:drawableLeft="@drawable/ic_edit_name"
                                android:drawablePadding="12dip"
                                android:hint="请输入儿童昵称"
                                android:maxLength="13"
                                android:paddingLeft="15dip"
                                android:textColor="@color/text_tu"
                                android:textColorHint="@color/text_tu"
                                android:textSize="14sp" />
                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_sure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dip"
                            android:layout_marginRight="20dip"
                            android:layout_marginTop="80dip"
                            android:background="@drawable/longbutton3x"
                            android:gravity="center"
                            android:paddingBottom="10dip"
                            android:text="确定"
                            android:textColor="@color/fff_btn_color"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_home_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="22dip"
                android:layout_marginTop="22dip"
                android:src="@drawable/left_button" />

            <ImageView
                android:id="@+id/img_home_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="22dip"
                android:layout_marginTop="22dip"
                android:src="@drawable/home_button3x"
                android:visibility="gone" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>